--- a/index.html
+++ b/index.html
@@ -11,10 +11,41 @@
 </head>
 
 <body>
+    <div class="loader-holder">
+        <div class="lds-roller">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     <div class="header">
         <h1>მართვის სირთულეები </h1>
     </div>
     <div class="main_container">
+        <div class="intro">
+            <p>
+                2021 წლის მარტში კულტურის სამინისტრო განათლების სამინისტროს გამოეყო და მისი მინისტრი თეა წულუკიანი
+                გახდა. წულუკიანის ხელმძღვანელობის პირველ ერთ წელიწადში სამინისტროდან და მისი დაქვემდებარებული
+                უწყებებიდან ათობით ადამიანი გათავისუფლდა მიმდინარე რეორგანიზაციის პროცესში, ნაწილმა თავად, მინისტრის
+                კულტურის პოლიტიკისადმი პროტესტის ნიშნად დატოვა სამსახური. ათობით ადამიანმა, ვინც თვლის, რომ სამსახურიდან
+                განსხვავებული აზრის, მინისტრთან ოპონირების ან პოლიტიკური შეხედულებების გამო გაათავისუფლეს, საკუთარი
+                უფლებების დასაცავად სასამართლოს მიმართა.
+            </p>
+            <br><br>
+            <p>
+                ეს “ონლაინ გალერეა” განსხვავებული პროფესიების, ინტერესების, ასაკისა და გამოცდილების ადამიანების
+                ისტორიებს აერთიანებს, ვინც მიიჩნევს, რომ უსამართლობის მსხვერპლი გახდა. ამ ამბების უმეტესობა სისტემურ
+                პრობლემებზე მიანიშნებს - მოძველებული სტრუქტურა, პროფესიონალების სიმწირე, მოუქნელობა, სიახლეებისა და
+                ცვლილებების სიმწირე, დაგვიანებული რეფორმები და ხელისუფლების წარმომადგენლები, რომლებიც თვლიან, რომ
+                კულტურას მოთვინიერება სჭირდება. ეს ის საკითხებია, რომლებიც ბევრი წელია განვითარების ხელის შემშლელი
+                ფაქტორებია და რომლებიც ახალი სიმწვავით გააცოცხლა თეა წულუკიანის დანიშვნამ.
+            </p>
+        </div>
         <!-- Photo Grid -->
         <div class="row">
             <div class="column">
@@ -52,31 +83,6 @@
                     style="width:100%">
             </div>
         </div>
-
-        <div class="intro">
-            <p>
-                2021 წლის მარტში კულტურის სამინისტრო განათლების სამინისტროს გამოეყო და მისი მინისტრი თეა წულუკიანი
-                გახდა.
-                წულუკიანის ხელმძღვანელობის პირველ ერთ წელიწადში სამინისტროდან და მისი დაქვემდებარებული უწყებებიდან
-                ათობით
-                ადამიანი გათავისუფლდა მიმდინარე რეორგანიზაციის პროცესში, ნაწილმა თავად, მინისტრის კულტურის პოლიტიკისადმი
-                პროტესტის ნიშნად დატოვა სამსახური. ათობით ადამიანმა, ვინც თვლის, რომ სამსახურიდან განსხვავებული აზრის,
-                მინისტრთან ოპონირების ან პოლიტიკური შეხედულებების გამო გაათავისუფლეს, საკუთარი უფლებების დასაცავად
-                სასამართლოს მიმართა.
-            </p>
-            <p>
-                ეს გალერეა განსხვავებული პროფესიების, ინტერესების, ასაკისა და გამოცდილების ადამიანების ისტორიებს
-                აერთიანებს,
-                ვინც მიიჩნევს, რომ უსამართლობის მსხვერპლი გახდა. ამ ამბების უმეტესობა სისტემურ პრობლემებზე მიანიშნებს -
-                მოძველებული სტრუქტურა, პროფესიონალების სიმწირე, მოუქნელობა, სიახლეებისა და ცვლილებების სიმწირე,
-                დაგვიანებული
-                რეფორმები და ხელისუფლების წარმომადგენლები, რომლებიც თვლიან, რომ კულტურას მოთვინიერება სჭირდება. ეს ის
-                საკითხებია, რომლებიც ბევრი წელია განვითარების ხელის შემშლელი ფაქტორებია და რომლებიც ახალი სიმწვავით
-                გააცოცხლა თეა წულუკიანის დანიშვნამ.
-            </p>
-        </div>
-
-
     </div>
     <section class="each_user_history_container">
         <span class="back_arrow" onClick="window.location.reload();">&#8592;</span>
@@ -647,6 +653,9 @@
 
 
         document.addEventListener("DOMContentLoaded", function (event) {
+            setTimeout(() => {
+                $(".loader-holder").css("display", "none");
+            }, 1000);
             clickForVideo();
             setId()
         });
@@ -664,6 +673,7 @@
                         $("footer").hide()
                     }
                 }
+                
             });
         }
 
@@ -678,13 +688,11 @@
                 // userHistory[i].setAttribute('data_id',i);
             }
         }
-        // $(".back_arrow").click(function () {
-        //     $('.main_container').show();
-        //     $('.each_user_history_container').hide();
-        //     $(".each_user_info").css("display","none !important");
-        //     $(window).scrollTop(sectionTopPosition);
-
-        // });
+        $(".back_arrow").click(function () {
+            // setTimeout(() => {
+            //     $(".loader-holder").css("display", "none");
+            // }, 1000);
+        });
     </script>
 </body>
 
