--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
     <div class="main_container">
         <div class="intro">
             <p>
-                2021 წლის მარტში კულტურის სამინისტრო განათლების სამინისტროს გამოეყო და მისი მინისტრი თეა წულუკიანი
-                გახდა. წულუკიანის ხელმძღვანელობის პირველ ერთ წელიწადში სამინისტროდან და მისი დაქვემდებარებული
-                უწყებებიდან ათობით ადამიანი გათავისუფლდა მიმდინარე რეორგანიზაციის პროცესში, ნაწილმა თავად, მინისტრის
-                კულტურის პოლიტიკისადმი პროტესტის ნიშნად დატოვა სამსახური. ათობით ადამიანმა, ვინც თვლის, რომ სამსახურიდან
-                განსხვავებული აზრის, მინისტრთან ოპონირების ან პოლიტიკური შეხედულებების გამო გაათავისუფლეს, საკუთარი
-                უფლებების დასაცავად სასამართლოს მიმართა.
-            </p>
-            <br><br>
-            <p>
-                ეს “ონლაინ გალერეა” განსხვავებული პროფესიების, ინტერესების, ასაკისა და გამოცდილების ადამიანების
-                ისტორიებს აერთიანებს, ვინც მიიჩნევს, რომ უსამართლობის მსხვერპლი გახდა. ამ ამბების უმეტესობა სისტემურ
-                პრობლემებზე მიანიშნებს - მოძველებული სტრუქტურა, პროფესიონალების სიმწირე, მოუქნელობა, სიახლეებისა და
-                ცვლილებების სიმწირე, დაგვიანებული რეფორმები და ხელისუფლების წარმომადგენლები, რომლებიც თვლიან, რომ
-                კულტურას მოთვინიერება სჭირდება. ეს ის საკითხებია, რომლებიც ბევრი წელია განვითარების ხელის შემშლელი
-                ფაქტორებია და რომლებიც ახალი სიმწვავით გააცოცხლა თეა წულუკიანის დანიშვნამ.
+                მინისტრები ხშირად ამბობენ, რომ მართვა რთულია. <br>
+                კულტურის მინისტრმა ამ პოსტზე დანიშვნისთანავე თქვა, რომ თუ მსახიობი განსხვავებულ აზრს გამოთქვამდა,
+                ეცდებოდა ენახა, საიდან მოდის ეს აზრი.<br>
+                რომ მუზეუმები გაძარცვულია და ისინი მხოლოდ ქაღალდზე არსებობს.<br>
+                რომ აფრთხილებდნენ, კულტურის მუშაკები პატიმრები არ გეგონოს, უფრო რთული ხალხიაო.<br>
+                და რომ როცა სხვებს ულოცავენ მინისტრის პოსტს, მას უსამძიმრებდნენ, რომ იმ ხალხთან ექნებოდა საქმე, ვინც
+                ყველა მინისტრს სისხლს უშრობდა.<br>
+                მართვა რთულია და ამისთვის ზოგჯერ საჭიროა რეორგანიზაცია, ადამიანების სამსახურიდან დათხოვა და ახალი
+                კადრების გაწვრთნა.<br>
+                მართვა რთულია იმიტომაც, რომ გათავისუფლებული ადამიანები ბრაზდებიან და სხვებს უყვებიან, როგორი ძნელია იყო
+                უსამართლობის მსხვერპლი, შეურაცხყოფილი.<br>
+                იშვიათად, მაგრამ იმასაც კითხულობენ, რა საჭიროა მართული ხელოვნება და ხელისუფლების სამსახურში ჩაყენებული
+                კულტურა.<br>
+                იქნებ მართვა იმიტომაც არის რთული, რომ ამ ხმებს არ უნდა მოუსმინო, მტკიცე უნდა იყო.
             </p>
         </div>
+        
         <!-- Photo Grid -->
         <div class="row">
             <div class="column">
                 <img class="user_info_route" src="./DSC_5769.JPG" style="width:100%">
-                <img class="user_info_route" src="https://gdb.rferl.org/0f210000-0aff-0242-81e0-08da47d73038.png"
+                <img class="user_info_route" src="https://gdb.rferl.org/0f500000-0aff-0242-51be-08da4942346c.jpg"
                     style="width:100%">
                 <img class="user_info_route" src="https://gdb.rferl.org/4004d9b2-785e-46b6-b734-3f5fd12b590b.jpg"
                     style="width:100%">
@@ -82,6 +82,26 @@
                 <img class="user_info_route" src="https://gdb.rferl.org/08de0000-0a00-0242-fe60-08da47ddf19d.jpeg"
                     style="width:100%">
             </div>
+        </div>
+
+        <div class="intro bottom_side">
+            <p>
+                2021 წლის მარტში კულტურის სამინისტრო განათლების სამინისტროს გამოეყო და მისი მინისტრი თეა წულუკიანი
+                გახდა. წულუკიანის ხელმძღვანელობის პირველ ერთ წელიწადში სამინისტროდან და მისი დაქვემდებარებული
+                უწყებებიდან ათობით ადამიანი გათავისუფლდა მიმდინარე რეორგანიზაციის პროცესში, ნაწილმა თავად, მინისტრის
+                კულტურის პოლიტიკისადმი პროტესტის ნიშნად დატოვა სამსახური. ათობით ადამიანმა, ვინც თვლის, რომ სამსახურიდან
+                განსხვავებული აზრის, მინისტრთან ოპონირების ან პოლიტიკური შეხედულებების გამო გაათავისუფლეს, საკუთარი
+                უფლებების დასაცავად სასამართლოს მიმართა.
+            </p>
+            <br><br>
+            <p>
+                ეს “ონლაინ გალერეა” განსხვავებული პროფესიების, ინტერესების, ასაკისა და გამოცდილების ადამიანების
+                ისტორიებს აერთიანებს, ვინც მიიჩნევს, რომ უსამართლობის მსხვერპლი გახდა. ამ ამბების უმეტესობა სისტემურ
+                პრობლემებზე მიანიშნებს - მოძველებული სტრუქტურა, პროფესიონალების სიმწირე, მოუქნელობა, სიახლეებისა და
+                ცვლილებების სიმწირე, დაგვიანებული რეფორმები და ხელისუფლების წარმომადგენლები, რომლებიც თვლიან, რომ
+                კულტურას მოთვინიერება სჭირდება. ეს ის საკითხებია, რომლებიც ბევრი წელია განვითარების ხელის შემშლელი
+                ფაქტორებია და რომლებიც ახალი სიმწვავით გააცოცხლა თეა წულუკიანის დანიშვნამ.
+            </p>
         </div>
     </div>
     <section class="each_user_history_container">
@@ -118,7 +138,7 @@
             <div class="each_user_info_common_container">
                 <p class="title">ნინო ჯაყელი </p>
                 <p class="subtitle">ეროვნული მუზეუმის სწავლული მდივანი და ქვის ხანის ფონდის კურატორი</p>
-                <img src="">
+                <img src="https://gdb.rferl.org/0f500000-0aff-0242-51be-08da4942346c.jpg">
                 <p class="hitory">
                     არქეოლოგი ნინო ჯაყელი ეროვნულ მუზეუმში 1982 წლიდან მუშაობდა, 2022 წლის 24 მაისამდე. ამ დღეს ნინოსთან
                     ერთად ეროვნული მუზეუმის 20-ზე მეტი თანამშრომელი თანამშრომელი გაათავისუფლეს სამსახურიდან.<br> <br>
@@ -257,6 +277,12 @@
                         მაშინ ჩამოვიდა, როცა მე აღარ ვიყავი სამხატვრო ხელმძღვანელი“.
                     </i>
                 </p>
+                <div class="video_container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/3QPyWENOoMg"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
         </div>
         <!-- first serction end -->
@@ -361,6 +387,12 @@
                         შიგნით არ მიშვებდნენ. მაშინ ვფიქრობდი, რა კარგია, რომ ახლა კარს აქეთ ვდგავარ და არა შიგნით“.
                     </i>
                 </p>
+                <div class="video_container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/tmy2yoHWKmA"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
         </div>
 
@@ -544,6 +576,12 @@
                         გააჩერებს“.
                     </i>
                 </p>
+                <div class="video_container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/FyA4_wSDqHY"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
         </div>
 
@@ -582,6 +620,12 @@
                         ესმოდეს“.
                     </i>
                 </p>
+                <div class="video_container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pE-EQ139Zp8"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
         </div>
 
@@ -629,7 +673,7 @@
     <footer>
         <div class="authors-container">
             <h2>პროექტის ავტორი </h2>
-            <p>ნასწია არაბული </p> <br>
+            <p>ნასტასია არაბული </p> <br>
             <h2>ფოტო </h2>
             <p>მზია საგანელიძე</p><br>
             <h2>ვიდეო</h2>
@@ -673,7 +717,7 @@
                         $("footer").hide()
                     }
                 }
-                
+
             });
         }
 
