--- a/index.html
+++ b/index.html
@@ -8,6 +8,347 @@
     <link rel="stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>მართვის სირთულეები </title>
+    <style>
+        @import url("https://cdn.web-fonts.ge/fonts/dejavu-sans/css/dejavu-sans.min.css");
+
+        * {
+            box-sizing: border-box;
+        }
+
+        body,
+        h2,
+        p {
+            margin: 0;
+            font-family: "DejaVu Sans", sans-serif;
+        }
+
+        .header {
+            text-align: center;
+            padding: 32px;
+            color: #ed610f;
+            font-size: 1.3rem;
+        }
+
+        .row {
+            width: 70%;
+            margin: 4% auto;
+            display: -ms-flexbox;
+            /* IE10 */
+            display: flex;
+            -ms-flex-wrap: wrap;
+            /* IE10 */
+            flex-wrap: wrap;
+        }
+
+        /* Create four equal columns that sits next to each other */
+        .column {
+            flex: calc(100%/3);
+            max-width: calc(100%/3);
+            padding: 0 4px;
+        }
+
+        .column img {
+            margin-top: 8px;
+            vertical-align: middle;
+            width: 100%;
+        }
+
+
+        .intro {
+            width: 70%;
+            margin: auto;
+        }
+
+        .bottom_side {
+            padding: 5% 0;
+        }
+
+        .intro p {
+            font-size: 1.2rem;
+        }
+
+        .each_user_info_common_container {
+            max-width: 800px;
+            padding-top: 100px;
+        }
+
+        .user_info_route:hover {
+            -ms-transform: scale(1.5);
+            /* IE 9 */
+            -webkit-transform: scale(1.5);
+            /* Safari 3-8 */
+            transform: scale(1.1);
+        }
+
+        .user_info_route {
+            transition: transform .7s;
+            cursor: pointer;
+        }
+
+        .each_user_info,
+        .each_user_info_common_container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .each_user_info_common_container img {
+            width: 60%;
+            padding: 5% 0;
+        }
+
+        .each_user_info {
+            display: none;
+        }
+
+        .back_arrow {
+            font-size: 50px;
+            color: #e05b43;
+            left: 5%;
+            top: 3%;
+            cursor: pointer;
+            position: absolute;
+        }
+
+        .each_user_history_container {
+            display: none;
+        }
+
+        .title {
+            font-size: 2.5rem;
+            margin: 0;
+        }
+
+        .subtitle {
+            font-size: 1.5rem;
+            text-align: center;
+            padding-top: 5%;
+        }
+
+        .hitory {
+            font-size: 1.3rem;
+            padding-bottom: 8%;
+        }
+
+        .video_container {
+            padding-bottom: 5%;
+        }
+
+        footer {
+            margin-bottom: 5%;
+        }
+
+        .authors-container p {
+            font-size: 1.2rem;
+        }
+
+        .authors-container {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .authors-container:before {
+            border-top: 2px solid #e77454;
+            content: "";
+            display: block;
+            margin: 1rem auto;
+            min-width: 300px;
+        }
+
+        /* Responsive layout - makes a two column-layout instead of four columns */
+
+        @media screen and (max-width: 800px) {
+            .column {
+                -ms-flex: 100%;
+                flex: 100%;
+                max-width: 100%;
+            }
+
+            .intro {
+                width: 70%;
+            }
+
+            .intro p {
+                font-size: 1.3rem;
+            }
+
+            .authors-container h2 {
+                font-size: 1.3rem;
+            }
+
+            .back_arrow {
+                top: 1%;
+            }
+
+            .each_user_info_common_container {
+                padding-top: 80px;
+                width: 85%;
+            }
+
+            .each_user_info_common_container img {
+                width: 100%;
+            }
+        }
+
+        @media screen and (max-width: 600px) {
+            .title {
+                font-size: 1.8rem;
+            }
+
+            .subtitle {
+                font-size: 1.2rem;
+            }
+
+            .row,
+            .intro {
+                width: 85%;
+            }
+
+            iframe {
+                width: 380px;
+                height: 250px;
+            }
+
+            .header {
+                font-size: 1.1rem;
+            }
+        }
+
+        @media screen and (max-width: 400px) {
+            .hitory {
+                font-size: 1rem;
+            }
+
+            iframe {
+                width: 320px;
+                height: 220px;
+            }
+        }
+
+
+        /*loader*/
+        .loader-holder {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: fixed;
+            width: 100%;
+            height: 100vh;
+            top: 0;
+            left: 0;
+            background: white;
+            z-index: 1000;
+        }
+
+        .lds-roller {
+            display: inline-block;
+            position: relative;
+            width: 80px;
+            height: 80px;
+        }
+
+        .lds-roller div {
+            animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+            transform-origin: 40px 40px;
+        }
+
+        .lds-roller div:after {
+            content: " ";
+            display: block;
+            position: absolute;
+            width: 7px;
+            height: 7px;
+            border-radius: 50%;
+            background: #d56003;
+            margin: -4px 0 0 -4px;
+        }
+
+        .lds-roller div:nth-child(1) {
+            animation-delay: -0.036s;
+        }
+
+        .lds-roller div:nth-child(1):after {
+            top: 63px;
+            left: 63px;
+        }
+
+        .lds-roller div:nth-child(2) {
+            animation-delay: -0.072s;
+        }
+
+        .lds-roller div:nth-child(2):after {
+            top: 68px;
+            left: 56px;
+        }
+
+        .lds-roller div:nth-child(3) {
+            animation-delay: -0.108s;
+        }
+
+        .lds-roller div:nth-child(3):after {
+            top: 71px;
+            left: 48px;
+        }
+
+        .lds-roller div:nth-child(4) {
+            animation-delay: -0.144s;
+        }
+
+        .lds-roller div:nth-child(4):after {
+            top: 72px;
+            left: 40px;
+        }
+
+        .lds-roller div:nth-child(5) {
+            animation-delay: -0.18s;
+        }
+
+        .lds-roller div:nth-child(5):after {
+            top: 71px;
+            left: 32px;
+        }
+
+        .lds-roller div:nth-child(6) {
+            animation-delay: -0.216s;
+        }
+
+        .lds-roller div:nth-child(6):after {
+            top: 68px;
+            left: 24px;
+        }
+
+        .lds-roller div:nth-child(7) {
+            animation-delay: -0.252s;
+        }
+
+        .lds-roller div:nth-child(7):after {
+            top: 63px;
+            left: 17px;
+        }
+
+        .lds-roller div:nth-child(8) {
+            animation-delay: -0.288s;
+        }
+
+        .lds-roller div:nth-child(8):after {
+            top: 56px;
+            left: 12px;
+        }
+
+        @keyframes lds-roller {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -45,11 +386,11 @@
                 იქნებ მართვა იმიტომაც არის რთული, რომ ამ ხმებს არ უნდა მოუსმინო, მტკიცე უნდა იყო.
             </p>
         </div>
-        
+
         <!-- Photo Grid -->
         <div class="row">
             <div class="column">
-                <img class="user_info_route" src="./DSC_5769.JPG" style="width:100%">
+                <img class="user_info_route" src="https://gdb.rferl.org/0ff70000-0aff-0242-7356-08da4a1f77da.jpg" style="width:100%">
                 <img class="user_info_route" src="https://gdb.rferl.org/0f500000-0aff-0242-51be-08da4942346c.jpg"
                     style="width:100%">
                 <img class="user_info_route" src="https://gdb.rferl.org/4004d9b2-785e-46b6-b734-3f5fd12b590b.jpg"
@@ -61,8 +402,8 @@
 
             </div>
             <div class="column">
-                <img class="user_info_route" src="./DSC_5969.JPG" style="width:100%">
-                <img class="user_info_route" src="./DSC_6316.JPG" style="width:100%">
+                <img class="user_info_route" src="https://gdb.rferl.org/0f500000-0aff-0242-feca-08da4a1f77d5.jpg" style="width:100%">
+                <img class="user_info_route" src="https://gdb.rferl.org/0f500000-0aff-0242-eaeb-08da4a1f77e8.jpg" style="width:100%">
                 <img class="user_info_route" src="https://gdb.rferl.org/08de0000-0a00-0242-195c-08da476d5ffb.jpeg"
                     style="width:100%">
                 <img class="user_info_route" src="https://gdb.rferl.org/0f500000-0aff-0242-12c2-08da47d733d1.png"
@@ -71,14 +412,12 @@
                     style="width:100%">
             </div>
             <div class="column">
-                <img class="user_info_route" src="./DSC_9379.JPG" style="width:100%">
+                <img class="user_info_route" src="https://gdb.rferl.org/0f500000-0aff-0242-321a-08da4a1f7983.jpg" style="width:100%">
                 <img class="user_info_route" src="https://gdb.rferl.org/0f210000-0aff-0242-81e0-08da47d73038.png"
                     style="width:100%">
                 <img class="user_info_route" src="https://gdb.rferl.org/0f210000-0aff-0242-5017-08da47d72f26.png"
                     style="width:100%">
-
-                <img class="user_info_route" src="./DSC_9336.JPG" style="width:100%">
-
+                <img class="user_info_route" src="https://gdb.rferl.org/0f500000-0aff-0242-22a6-08da4a1f78d8.jpg" style="width:100%">
                 <img class="user_info_route" src="https://gdb.rferl.org/08de0000-0a00-0242-fe60-08da47ddf19d.jpeg"
                     style="width:100%">
             </div>
