--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <div class="each_user_info_common_container">
                 <p class="title">დავით ნიორაძე</p>
                 <p class="subtitle">ხელოვნების მუზეუმის მმართველის ყოფილი თანაშემწე</p>
-                <img src="./DSC_5769.JPG">
+                <img src="https://gdb.rferl.org/0ff70000-0aff-0242-7356-08da4a1f77da.jpg">
                 <p class="hitory">
                     დავით ნიორაძემ მუზეუმში მუშაობის გაგრძელებაზე უარი 2021 წლის ნოემბერში თქვა, იქ გატარებული 6
                     წლის
@@ -632,7 +632,7 @@
             <div class="each_user_info_common_container">
                 <p class="title">ირმა კოპალიანი</p>
                 <p class="subtitle">ქსოვილებისა და ნაქარგობის განყოფილებაში კურატორის ყოფილი თანაშემწე</p>
-                <img src="./DSC_5969.JPG">
+                <img src="https://gdb.rferl.org/03170000-0aff-0242-2d99-08da2f311f0f.jpg">
                 <p class="hitory">
                     ირმა კოპალიანი ხელოვნების მუზეუმში 2018 წლის 1 ივლისიდან მუშაობდა. სამხატვრო აკადემიის
                     დასრულების შემდეგ ლექტორების რეკომენდაციით მოხვდა და ორთვიანი სტაჟირების შემდეგ ფონდში დარჩა:
